# gl-geometry-modperf

./: CMakeLists.txt  LICENSE.txt  README.md
cmake/: glew.cmake  glfw.cmake  glm.cmake  turf.cmake
data/: bump.frag  bump.vert
src/: CMakeLists.txt  config.h.in  geometry.cpp  geometry.hpp  input.cpp  input.hpp  shader.cpp  shader.hpp  sphere.cpp  sphere.hpp  timer.cpp  timer.hpp  view.cpp  view.hpp  w.cpp  xform.cpp  xform.hpp
